Finished Hangman game

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman game</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <p id="puzzle"></p>
-    <p id="guesses"></p>
-    <button id="reset">Reset</button>
-    <script src="requests.js"></script>
-    <script src="hangman.js"></script>
-    <script src="app.js"></script>
+    <div>
+        <div id="puzzle" class="puzzle"></div>
+        <p id="guesses"></p>
+        <button id="reset" class="button">Reset</button>
+    </div>
+    <script src="/scripts/bundle.js"></script>
 </body>
 </html>
